vX.Y.Z (YYYY-MM-DD)

- Remove dated psql scripts
- psql: Do not attempt to create database if it already exists, so that errors
  due to a lack of permissions to create database can be effectively trapped

v0.53.6 (2023-09-04)

- driver3 now processes -L flag to limit number of connections by limited the
  number of processes forked
- pgsql-build-db: fix execution of pgsql-load-db and pgsql-create-index so
  that parameters are handled correctly when the -l argument is not used

v0.53.5 (2023-08-25)

- Handle host names greater than 31 characters, now up to 255.
- Fix detection of touchstone tools for collecting database stats

v0.53.4 (2023-07-11)

- Fix version flag usage with AppImages
- Add OpenSSH to AppImage
- Fix dbt2-run --client-connections= command line handling
- Add ssh to the AppImage

v0.53.3 (2023-06-29)

- Update touchstone tool commands to use "ts", enabling use of ts-tools
  AppImage, requires at minimum touchstone-tools v0.6.x
- Update scripts to use "dbt2" where appropriate, enabling use of dbt2 AppImage
- Fix handling of -altered flag in "run" script for driver mode 1
- Bump touchstone-tools version to v0.7.1 for gathering postgresql stats
  supporting v15
- Restrict AppImage "activate" script to bash shells

v0.53.2 (2023-06-19)

- Quiet sqlite3 post-process script from displaying an error when there are no
  New Order transactions
- Rename post-process.sql to post-process.sqlite3
- Update AppImage container file to use Ubuntu 14.04
- Add missing libraries to AppImage for gnuplot
- Add fonts to Appimage for gnuplot
- Replace readlink with realpath
- Remove dependency on bc from sqlite3 post-process script

v0.53.1 (2023-05-20)

- AppImage checks for existing LD_LIBRARY_PATH before updating
- Add missing libraries for gnuplot to AppImage
- Fix installation of dbt2-build man page
- Update dbt2.desktop syntax for aarch64 AppImage
- Add "activate" script to AppImage

v0.53.0 (2023-05-17)
